# semantic-scholar-fastmcp-mcp-server

./: Dockerfile  README.md  TOOLS.md  docker-compose.yml  pyproject.toml  requirements.txt  semantic_scholar_server.py  smithery.yaml
.github/workflows/: spec-audit.yml
scripts/: spec_audit.py
semantic_scholar/: __init__.py  bridge.py  config.py  server.py
semantic_scholar/api/: authors.py  papers.py  recommendations.py
semantic_scholar/core/: __init__.py  transport.py
semantic_scholar/utils/: errors.py  http.py  logger.py
test/: test_author.py  test_bridge.py  test_bridge_contract.py  test_new_tools.py  test_paper.py  test_papers_contract.py  test_rate_limiter.py  test_recommend.py  test_retry.py  test_utils.py
