[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semantic-scholar-fastmcp"
dynamic = ["version"]
description = "A FastMCP server for the Semantic Scholar API — paper search, author info, citations, and recommendations."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Zongmin Yu" },
]
keywords = ["semantic-scholar", "mcp", "fastmcp", "academic", "papers", "citations"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "fastmcp>=2.0.0,<3.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
semantic-scholar-fastmcp = "semantic_scholar.server:main"
semantic-scholar-mcp-server = "semantic_scholar.server:main"

[project.urls]
Homepage = "https://github.com/zongmin-yu/semantic-scholar-fastmcp-mcp-server"
Repository = "https://github.com/zongmin-yu/semantic-scholar-fastmcp-mcp-server"
Issues = "https://github.com/zongmin-yu/semantic-scholar-fastmcp-mcp-server/issues"

[tool.hatch.version]
path = "semantic_scholar/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["semantic_scholar"]
